samples/_failures_safe/1761787037_4bb07b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1341e92.c: In function ‘main’:
./samples/SAFE/__tmp_e1341e92.c:144:5: error: expected declaration or statement at end of input
  144 |     if (len > 0 && input_text[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_e1341e92.c:144:5: error: expected declaration or statement at end of input
